--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -10,9 +10,7 @@
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
-            %span
-              WOOD
-            STOK.ru
+            Mebel<b>S</b>mart
 
         .span8.options
           %ul.nav.nav-pills.pull-right
