--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -109,10 +109,18 @@ h4.title
     position: relative
     top: 0px
     left: 0px
-    a
-      font-size: 26px
-      font-weight: bold
 
+    /* edited by Je */
+    a
+      font-size: 50px
+      font-weight: bold
+      text-shadow: 0px 0px 2px rgb(0, 0, 0)
+      &:hover
+        text-shadow: 0px 0px 5px rgb(0, 0, 0)
+
+      b
+        color: rgb(145, 193, 19) !important
+      /* end */
       span
         color: rgb(145, 193, 19) !important
         margin-right: -5px
