--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -822,7 +822,7 @@ p.price span.red
   right: 10px
   left: auto
 .row
-  margin-bottom: 25px
+  /*margin-bottom: 25px*/
 .clear-margin-top
   margin-top: 0
 .clear-color-line
