--- a/app/views/admin/_menu.html.haml
+++ b/app/views/admin/_menu.html.haml
@@ -7,7 +7,7 @@
     %a.dropdown-toggle{:href => "/admin"}
       Заказы
 
-  %li.dropdown{:class => params[:controller] == "categories" ? "active" : ""}
+  %li.dropdown{:class => params[:controller] == "admin#categories" ? "active" : ""}
     %a.dropdown-toggle{:href => "/admin/categories"}
       Разделы
 
