--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
                   %i.icon-shopping-cart
                   Корзина
                   %span
-                    (#{@order.baskets.count})
+                    (#{@order.cnt})
       #top_menu.row
         .span12
 
