--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
-            Mebel<b>S</b>mart
+            Mebel<b></b>mart
 
         .span8.options
           %ul.nav.nav-pills.pull-right
