--- a/app/views/catalog/detail.html.haml
+++ b/app/views/catalog/detail.html.haml
@@ -13,7 +13,7 @@
 .row
   .span6
     %h2.clear-margin-top
-      Detail name
+      = @product.name
       %span.label.label-important
         По акции
       %span.label.label-warning
