--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,12 +11,12 @@
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
-            Mebel<b>A</b>RT
+            <f>М</f>ебел<f>М</f>арт
 
         .span8.options
           %ul.nav.nav-pills.pull-right
             %li.active
-              %a{:href => "#", :title => "Call me"} Заказать обратный звонок
+              %a{:href => "#order_call", :title => "Call me"} Заказать обратный звонок
             %li.pad
               |
             %li
@@ -63,12 +63,12 @@
                       %a.dropdown-toggle{:href => "/contacts"}
                         Контакты
 
-                    -#%li.shopping_cart_link.pull-right.hide
+                    %li.shopping_cart_link.pull-right.hide
                       %a.scl{:href => "/basket"}
                         %i.icon-shopping-cart.icon-white
                         Корзина
                         %span
-                          (#{!@basket.empty? ? @basket.baskets.count : 0})
+                          (#{@order.cnt})
                     %li.search_form.pull-right
                       %form.navbar-search{:method => "POST"}
                         %input.icon-search{:type => 'submit', :value => ""}
@@ -128,3 +128,18 @@
                   %br
                     %i.icon-ok-circle
                     %a{:href => 'call:+78008888888', :title => ''} 8 (800) 888 88-88
+    .black-bg.hide
+    .order_call
+      %form
+        %fieldset
+          %legend Форма заказа обратного звонка
+          %label Как к вам обратиться?
+          %input.span5.order_call_name{:placeholder => "", :type => "text"}/
+          %span.alert.alert-error.hide Не меньше 2 букв
+          %label Номер телефона для связи с вами
+          .input-prepend
+            %span.add-on +7
+            %input.span5.order_call_phone{:placeholder => "", :type => "text"}/
+          %span.alert.alert-error.hide Пример: 7774443322
+          %button.btn.btn-success.btn-block.disabled{:type => "submit"} Отправить заявку
+          %button.close.btn.btn-block Закрыть
