--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -113,12 +113,12 @@ h4.title
     /* edited by Je */
     a
       font-size: 39px
-      font-weight: bold
+      font-weight: 200
       text-shadow: 0px 0px 1px rgb(0, 0, 0)
       &:hover
-        text-shadow: 0px 0px 5px rgb(0, 0, 0)
+        text-shadow: 0px 0px 2px rgb(0, 0, 0)
 
-      b
+      f
         color: rgb(145, 193, 19) !important
       /* end */
       span
