--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -61,6 +61,8 @@
 /* Utility classes
 @import "bootstrap/utilities"
 
+@import "shadow-effect"
+
 @import "index"
 @import "admin"
 @import "order_call"
