--- a/app/views/catalog/list.html.haml
+++ b/app/views/catalog/list.html.haml
@@ -410,6 +410,6 @@
               Декор:
             %span
               3 вида обивки
-          .btn-group
-            %a.btn{:href => '#', :title => ''} Подробнее
+
+            %a.btn.btn-link{:href => '#', :title => ''} Подробнее
             .btn.btn-success.add_to_shopping_cart В корзину
