--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -16,7 +16,7 @@
   /    %img{:alt => "", :src => "http://wbpreview.com/previews/WB0R3R06X/img/ad.png"}/
 
 .row.services
-  .span4
+  .span4.effect3
     .service
       %div
         %h4
@@ -39,7 +39,7 @@
           Lorem Ipsum - это текст-"рыба", часто используемый
         %p.center
           %button.btn.btn-small Подробнее...
-  .span4
+  .span4.effect4
     .service
       %div
         %h4
