--- a/app/views/catalog/category.html.haml
+++ b/app/views/catalog/category.html.haml
@@ -51,7 +51,7 @@
             %a{:href => "/catalog/#{p.category_id}/#{p.id}", :title => p.name}
               %p.obj_img
                 %span.sale
-                %img{:src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :alt => '', :width => '100%'}
+                -#%img{:src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :alt => '', :width => '100%'}
 
                 = image_tag p.photos.first.file.url(:m)
               %p.obj_info_mini
