--- a/app/assets/stylesheets/order_call.css.sass
+++ b/app/assets/stylesheets/order_call.css.sass
@@ -22,12 +22,22 @@
     fieldset
       legend
       label
-      input.order_call_name
-      span.alert
-      .input-prepend
-        margin-bottom: 20px
-        span.add-on
+      .section.error
         input
-          width: 340px !important
+          border-color: rgb(238, 211, 215) !important
+        span.alert
+          display: block !important
+        .input-prepend
+          margin-bottom: 10px
+      .section
+        input.order_call_name
+        span.alert
+          width: 86.5%
+          margin-bottom: 20px
+        .input-prepend
+          margin-bottom: 20px
+          span.add-on
+          input
+            width: 340px !important
       button
         margin-bottom: 20px
