--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -915,3 +915,8 @@ p.price span.red
 .thumbnail.select
   border: 1px solid rgb(145, 193, 19) !important
   box-shadow: -3px 3px 7px rgba(145, 193, 19, 0.4) !important
+
+.controls
+  span.alert
+    width: 68%
+    display: block
