--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -142,6 +142,6 @@
             .input-prepend
               %span.add-on +7
               %input.span5.order_call_phone{:placeholder => "", :type => "text", :name => 'phone'}/
-            %span.alert.alert-error.hide Пример: 7774443322
+            %span.alert.alert-error.hide Пример: 555 444 33 22
           %button.btn.btn-success.btn-block.disabled{:type => "submit", :name => 'submit'} Отправить заявку
           %button.close.btn.btn-block Закрыть
