--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -917,6 +917,8 @@ p.price span.red
   box-shadow: -3px 3px 7px rgba(145, 193, 19, 0.4) !important
 
 .controls
+  .input-prepend
+    input
+      width: 419px !important
   span.alert
     width: 68%
-    display: block
