--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -298,6 +298,7 @@ span.sale
   position: relative
   img
     margin: 0 !important
+    height: 132px
   span
     left: 14px
     img
@@ -320,7 +321,7 @@ p.obj_info_mini
     font-weight: bold
     margin-top: 0px
     color: rgb(51, 51, 51) !important
-    width: 50px
+    width: 80px
     display: block
     float: left
     @mixin text-overflow()
@@ -922,3 +923,15 @@ p.price span.red
       width: 419px !important
   span.alert
     width: 68%
+
+.span4
+  .block_content
+    .products_list.text_block
+      h4.title
+        span.pull-left
+          i.icon-book
+          strong
+      a
+        p.obj_img
+          img
+            width: 100%
