--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Mebel
+    %title MyHomeMebel
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
@@ -11,7 +11,7 @@
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
-            <f>М</f>ебел<f>М</f>арт
+            <f>M</f>y<f>H</f>ome<f>M</f>ebel
 
         .span8.options
           %ul.nav.nav-pills.pull-right
