--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -850,7 +850,7 @@ p.price span.red
 .cloth_cont
   position: fixed
   top: 15%
-  right: 0
+  right: -252px
   padding: 0 5px
   background: rgba(255,255,255,0.9)
   border: 1px solid rgb(222, 222, 222)
