--- a/app/views/catalog/product.html.haml
+++ b/app/views/catalog/product.html.haml
@@ -125,7 +125,7 @@
     %input{:type => "hidden", :value => "", :name => 'first_cloth'}
     %input{:type => "hidden", :value => "", :name => 'second_cloth'}
     %input.btn.btn-success.btn-block.disabled.add_shoping_box{:type =>'submit', :value=>'В корзину'}
-  .arr_left_box.open
+  .arr_left_box
     %a.ll.hide{:href => "javascript:;"}
       &lt;
     %a.rr{:href => "javascript:;"}
